// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TotalRewardsPageComponent should show the create new banner when no statements are returned 1`] = `
<pf-total-rewards-statement-list-page
  focusedTab$={[Function Store]}
  statementsLoading$={[Function Observable]}
  statementsLoadingError$={[Function Observable]}
  statementsSearchTerm$={[Function Store]}
  statementsTotal$={[Function Observable]}
  store={[Function Store]}
  tabs={[Function NgbTabset]}
>
  <pf-page-with-title-bar>
    
    Total Rewards
    
    <pf-input-debounce
      class="mr-2"
    />
    
    <div
      class="d-flex flex-column h-100"
    >
      <div
        class="h-100"
      >
        <ngb-tabset
          ng-reflect-destroy-on-hide="false"
        >
          <ul
            class="nav nav-tabs justify-content-start"
            role="tablist"
          >
            
            <li
              class="nav-item"
            >
              <a
                aria-controls="Statements-panel"
                aria-disabled="false"
                aria-selected="true"
                class="nav-link active"
                href=""
                id="Statements"
                role="tab"
              >
                 Statements
                
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                aria-controls="Templates-panel"
                aria-disabled="false"
                aria-selected="false"
                class="nav-link"
                href=""
                id="Templates"
                role="tab"
              >
                 Templates
                
              </a>
            </li>
          </ul>
          <div
            class="tab-content"
          >
            
            
            <div
              aria-labelledby="Statements"
              class="tab-pane active"
              id="Statements-panel"
              role="tabpanel"
            >
              
              
              <pf-create-new-statement-banner />
              
            </div>
            
            
            <div
              aria-labelledby="Templates"
              class="tab-pane "
              id="Templates-panel"
              role="tabpanel"
            >
              
              <pf-total-rewards-template-card-selector />
            </div>
            
          </div>
        </ngb-tabset>
      </div>
    </div>
  </pf-page-with-title-bar>
</pf-total-rewards-statement-list-page>
`;

exports[`TotalRewardsPageComponent should show the grid component when statements are returned 1`] = `
<pf-total-rewards-statement-list-page
  focusedTab$={[Function Store]}
  statementsLoading$={[Function Store]}
  statementsLoadingError$={[Function Store]}
  statementsSearchTerm$={[Function Store]}
  statementsTotal$={[Function Observable]}
  store={[Function Store]}
  tabs={[Function NgbTabset]}
>
  <pf-page-with-title-bar>
    
    Total Rewards
    
    <pf-input-debounce
      class="mr-2"
    />
    
    <div
      class="d-flex flex-column h-100"
    >
      <div
        class="h-100"
      >
        <ngb-tabset
          ng-reflect-destroy-on-hide="false"
        >
          <ul
            class="nav nav-tabs justify-content-start"
            role="tablist"
          >
            
            <li
              class="nav-item"
            >
              <a
                aria-controls="Statements-panel"
                aria-disabled="false"
                aria-selected="true"
                class="nav-link active"
                href=""
                id="Statements"
                role="tab"
              >
                 Statements
                
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                aria-controls="Templates-panel"
                aria-disabled="false"
                aria-selected="false"
                class="nav-link"
                href=""
                id="Templates"
                role="tab"
              >
                 Templates
                
              </a>
            </li>
          </ul>
          <div
            class="tab-content"
          >
            
            
            <div
              aria-labelledby="Statements"
              class="tab-pane active"
              id="Statements-panel"
              role="tabpanel"
            >
              
              
              <div
                class="h-100"
              >
                <pf-statements-grid />
              </div>
              
            </div>
            
            
            <div
              aria-labelledby="Templates"
              class="tab-pane "
              id="Templates-panel"
              role="tabpanel"
            >
              
              <pf-total-rewards-template-card-selector />
            </div>
            
          </div>
        </ngb-tabset>
      </div>
    </div>
  </pf-page-with-title-bar>
</pf-total-rewards-statement-list-page>
`;
